--- a/index.html
+++ b/index.html
@@ -17,22 +17,24 @@
   <body>
     <!-- *HEADER SECTION*-->
     <header class="header-section">
-      <a href="#" class="header-logo">Web<span class="header-logo-black">Studio</span></a>
-      <nav class="header-navigation">
-        <ul class="header-list">
-          <li>
-            <a href="./index.html" class="header-pages">Студия</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="header-pages">Портфолио</a>
-          </li>
-          <li>
-            <a href="" class="header-pages">Контакты</a>
-          </li>
-        </ul>
+      <a href="./index.html" class="logo link">Web<span class="header-logo">Studio</span></a>
+      <nav>
+        <div class="header-navigation">
+          <ul class="header-list">
+            <li class="list-link link">
+              <a href="./index.html" class="header-pages link">Студия</a>
+            </li>
+            <li class="list-link link">
+              <a href="./portfolio.html" class="header-pages link">Портфолио</a>
+            </li>
+            <li class="list-link link">
+              <a href="" class="header-pages link">Контакты</a>
+            </li>
+          </ul>
+        </div>
       </nav>
-      <a href="mailto:info@devstudio.com" class="header-email">info@devstudio.com</a>
-      <a href="tel:+380961111111" class="header-telephone">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a>
+      <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a>
     </header>
 
     <!-- *MAIN SECTION -->
@@ -41,29 +43,29 @@
       <section class="hero-section">
         <img src="#" alt="Главное фото" class="hero-photo" />
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button type="button" class="hero-button">Заказать услугу</button>
+        <button type="button" class="hero-button hero-button-text">Заказать услугу</button>
       </section>
 
       <!-- *OUR BENEFITS SECTION* -->
       <section class="benefits-section">
         <ul class="benefits-list">
-          <li>
+          <li class="list-link">
             <h2>Внимание к деталям</h2>
             <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
           </li>
-          <li>
+          <li class="list-link">
             <h2>Пунктуальность</h2>
             <p>
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
+          <li class="list-link">
             <h2>Планирование</h2>
             <p>
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
+          <li class="list-link">
             <h2>Современные технологии</h2>
             <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
           </li>
@@ -74,7 +76,7 @@
       <section class="job-section">
         <h2 class="job-title">Чем мы занимаемся</h2>
         <ul class="job-list">
-          <li>
+          <li class="list-link">
             <img
               src="./images/index/img.png"
               width="370"
@@ -82,7 +84,7 @@
               alt="Мужчина работает с планшетом"
             />
           </li>
-          <li>
+          <li class="list-link">
             <img
               src="./images/index/img1.png"
               width="370"
@@ -90,7 +92,7 @@
               alt="Девушка с ноутбуком и телефоном"
             />
           </li>
-          <li>
+          <li class="list-link">
             <img
               src="./images/index/img2.png"
               width="370"
@@ -105,7 +107,7 @@
       <section class="command-section">
         <h2>Наша команда</h2>
         <ul class="command-list">
-          <li>
+          <li class="list-link">
             <img
               src="./images/index/img3.jpg"
               width="270"
@@ -115,7 +117,7 @@
             <h3>Игорь Демьяненко</h3>
             <p>Product Designer</p>
           </li>
-          <li>
+          <li class="list-link">
             <img
               src="./images/index/img4.jpg"
               width="270"
@@ -125,7 +127,7 @@
             <h3>Ольга Репина</h3>
             <p>Frontend Developer</p>
           </li>
-          <li>
+          <li class="list-link">
             <img
               src="./images/index/img5.jpg"
               width="270"
@@ -135,7 +137,7 @@
             <h3>Николай Тарасов</h3>
             <p>Marketing</p>
           </li>
-          <li>
+          <li class="list-link">
             <img
               src="./images/index/img6.jpg"
               width="270"
@@ -151,7 +153,7 @@
 
     <!-- *FOOTER SECTION* -->
     <footer class="footer-section">
-      <a href="#" class="footer-logo">WebStudio</a>
+      <p class="logo">Web<span class="footer-logo">Studio</span></p>
       <address class="footer-adress">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <br />
