--- a/portfolio.html
+++ b/portfolio.html
@@ -17,22 +17,24 @@
   <body>
     <!-- *HEADER SECTION*-->
     <header class="header-section">
-      <a href="#" class="header-logo">Web<span class="header-logo-black">Studio</span></a>
-      <nav class="header-navigation">
-        <ul class="header-list">
-          <li>
-            <a href="./index.html" class="header-pages">Студия</a>
-          </li>
-          <li>
-            <a href="./portfolio.html" class="header-pages">Портфолио</a>
-          </li>
-          <li>
-            <a href="" class="header-pages">Контакты</a>
-          </li>
-        </ul>
+      <a href="./index.html" class="logo link">Web<span class="header-logo">Studio</span></a>
+      <nav>
+        <div class="header-navigation">
+          <ul class="header-list">
+            <li class="list-link link">
+              <a href="./index.html" class="header-pages link">Студия</a>
+            </li>
+            <li class="list-link link">
+              <a href="./portfolio.html" class="header-pages link">Портфолио</a>
+            </li>
+            <li class="list-link link">
+              <a href="" class="header-pages link">Контакты</a>
+            </li>
+          </ul>
+        </div>
       </nav>
-      <a href="mailto:info@devstudio.com" class="header-email">info@devstudio.com</a>
-      <a href="tel:+380961111111" class="header-telephone">+38 096 111 11 11</a>
+      <a href="mailto:info@devstudio.com" class="header-mail link">info@devstudio.com</a>
+      <a href="tel:+380961111111" class="header-tel link">+38 096 111 11 11</a>
     </header>
 
     <main>
@@ -40,20 +42,20 @@
       <section class="filter-section">
         <h1 class="filter-title">Portfolio</h1>
         <ul class="filter-list">
-          <li>
-            <button type="button" class="filter-button">Все</button>
+          <li class="list-link link">
+            <button type="button" class="filter-button filter-button-text">Все</button>
           </li>
-          <li>
-            <button type="button" class="filter-button">Веб-сайты</button>
+          <li class="list-link link">
+            <button type="button" class="filter-button filter-button-text">Веб-сайты</button>
           </li>
-          <li>
-            <button type="button" class="filter-button">Приложения</button>
+          <li class="list-link link">
+            <button type="button" class="filter-button filter-button-text">Приложения</button>
           </li>
-          <li>
-            <button type="button" class="filter-button">Дизайн</button>
+          <li class="list-link link">
+            <button type="button" class="filter-button filter-button-text">Дизайн</button>
           </li>
-          <li>
-            <button type="button" class="filter-button">Маркетинг</button>
+          <li class="list-link link">
+            <button type="button" class="filter-button filter-button-text">Маркетинг</button>
           </li>
         </ul>
       </section>
@@ -61,95 +63,95 @@
       <!-- *PORTFOLIO SECTION* -->
       <section class="portfolio-section">
         <ul class="portfolio-list">
-          <li>
+          <li class="list-link link">
             <img
               src="./images/portfolio/img1.jpg"
               width="370"
               height="294"
               alt="Страница вебсайта Технокряк"
             />
-            <h2>Технокряк</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-title">Технокряк</h2>
+            <p class="portfolio-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="list-link link">
             <img
               src="./images/portfolio/img2.jpg"
               width="370"
               height="294"
               alt="Постер с баскетболистами"
             />
-            <h2>Постер New Orlean vs Golden Star</h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-title">Постер New Orlean vs Golden Star</h2>
+            <p class="portfolio-text">Дизайн</p>
           </li>
-          <li>
+          <li class="list-link link">
             <img
               src="./images/portfolio/img3.jpg"
               width="370"
               height="294"
               alt="Логотип ресторана Seafood"
             />
-            <h2>Ресторан Seafood</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-title">Ресторан Seafood</h2>
+            <p class="portfolio-text">Приложение</p>
           </li>
-          <li>
+          <li class="list-link link">
             <img
               src="./images/portfolio/img4.jpg"
               width="370"
               height="294"
               alt="Чёрные музыкальные наушники"
             />
-            <h2>Проект Prime</h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-title">Проект Prime</h2>
+            <p class="portfolio-text">Маркетинг</p>
           </li>
-          <li>
+          <li class="list-link link">
             <img
               src="./images/portfolio/img5.jpg"
               width="370"
               height="294"
               alt="Белая и коричневая коробки"
             />
-            <h2>Проект Boxes</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-title">Проект Boxes</h2>
+            <p class="portfolio-text">Приложение</p>
           </li>
-          <li>
+          <li class="list-link link">
             <img
               src="./images/portfolio/img6.jpg"
               width="370"
               height="294"
               alt="Чёрный кран монитора"
             />
-            <h2>Inspiration has no Borders</h2>
-            <p>Веб-сайт</p>
+            <h2 class="portfolio-title">Inspiration has no Borders</h2>
+            <p class="portfolio-text">Веб-сайт</p>
           </li>
-          <li>
+          <li class="list-link link">
             <img
               src="./images/portfolio/img7.jpg"
               width="370"
               height="294"
               alt="Развёрнутый журнал"
             />
-            <h2>Издание Limited Edition</h2>
-            <p>Дизайн</p>
+            <h2 class="portfolio-title">Издание Limited Edition</h2>
+            <p class="portfolio-text">Дизайн</p>
           </li>
-          <li>
+          <li class="list-link link">
             <img
               src="./images/portfolio/img8.jpg"
               width="370"
               height="294"
               alt="Бирка с надписью"
             />
-            <h2>Проект LAB</h2>
-            <p>Маркетинг</p>
+            <h2 class="portfolio-title">Проект LAB</h2>
+            <p class="portfolio-text">Маркетинг</p>
           </li>
-          <li>
+          <li class="list-link link">
             <img
               src="./images/portfolio/img9.jpg"
               width="370"
               height="294"
               alt="Включенный ноутбук"
             />
-            <h2>Growing Business</h2>
-            <p>Приложение</p>
+            <h2 class="portfolio-title">Growing Business</h2>
+            <p class="portfolio-text">Приложение</p>
           </li>
         </ul>
       </section>
@@ -157,7 +159,7 @@
 
     <!-- *FOOTER SECTION* -->
     <footer class="footer-section">
-      <a href="#" class="footer-logo">WebStudio</a>
+      <p class="logo">Web<span class="footer-logo">Studio</span></p>
       <address class="footer-adress">
         <p>г. Киев, пр-т Леси Украинки, 26</p>
         <br />
